package net.deanly.structure.search.domain.search.core.exception;

public class InvalidConditionException extends Exception {
    public InvalidConditionException(String message) {
        super(message);
    }
}
